update versions, add some more readme
Signed-off-by: Mark Cohen <markcoh@amazon.com>